--- a/section3/chat-backend/build.gradle
+++ b/section3/chat-backend/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2:2.1.214'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.1'
+	testImplementation 'org.dbunit:dbunit:2.7.3'
 }
 
 tasks.named('test') {
