--- a/section9/chat-backend/src/main/resources/application.yml
+++ b/section9/chat-backend/src/main/resources/application.yml
@@ -13,3 +13,8 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
     default-statement-timeout: 30
+jwt:
+  public:
+    key: classpath:app.key.pub
+  private:
+    key: classpath:app.key
