--- a/section9/chat-backend/build.gradle
+++ b/section9/chat-backend/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.1'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:2.7.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:2.7.1'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.1'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
