--- a/section10/chat-backend/build.gradle
+++ b/section10/chat-backend/build.gradle
@@ -19,8 +19,9 @@ repositories {
 }
 
 dependencies {
+	implementation 'mysql:mysql-connector-java:8.0.31'
+
 	implementation 'com.bucket4j:bucket4j-core:8.1.1'
-	
 	implementation 'org.springframework.retry:spring-retry:2.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-aop:2.7.1'
 
